--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <div style="height: 720px;width: 1900px;position: absolute;top: 0;left: 0;right: 0;margin: -20px;background-color: white;z-index: -5;"></div>
     <div style="position: absolute;top: 100px;font-size: 800%;font-family: Pacifico, cursive;z-index: 1;color: white;left: 360px;">PIXELZ</div>
     <div style="font-family: Caveat;color: white;position: absolute;font-size: 300%;bottom:  500px;left: 1000px;">unleashing the madness...</div>
-    <div style="color: white;position: absolute;font-size: 300%;bottom: 150px;left: 50px;">let's come along a great way!!</div>
+    <div style="color: rgb(4, 18, 41);position: absolute;font-size: 300%;bottom: 150px;left: 50px;">let's come along a great way!!</div>
     
 </div>
 <div class="cont" style="height: 50px;width: 900px;">
